--- a/Pages/Tutorials/MernCodersGyan.html
+++ b/Pages/Tutorials/MernCodersGyan.html
@@ -216,6 +216,16 @@
                             <li>Click on "Manage Windows Credentials".</li>
                             <li>Delete any credentials related to Git or GitHub.</li>
                         </ul>
+                        <h5 class="text-primary">Summary</h5>
+                        <ul class="text-success">
+                            <li>git init</li>
+                            <li>git remote add origin https://github.com/kumarsauravks/auth-service-one.git</li>
+                            <li>git pull --set-upstream origin master</li>
+                            <li>Add/Update a file to your local directory</li>
+                            <li>git add .</li>
+                            <li>git commit -m "First Commit"</li>
+                            <li>git push</li>
+                        </ul>
                         <div>
                             <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('checklist-tab')" >Previous </button>
                             <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('nvm-tab')" >Next </button>
