--- a/Pages/Qna.html
+++ b/Pages/Qna.html
@@ -90,23 +90,27 @@
                                 <div class="p-5">
                                     <div class="col-12 col-md-4">
                                         <div class="card shadow">
-                                            <img src="https://blob.sololearn.com/assets/introduction-C-sharp-cover.png" class="card-img-top rounded-top" alt="Themesberg office">
+                                            <img src="https://blob.sololearn.com/assets/introduction-C-sharp-cover.png"
+                                                class="card-img-top rounded-top" alt="Themesberg office">
                                             <div class="card-body">
-                                                <span class="h6 icon-tertiary small"><span class="fas fa-medal me-2"></span>C# Language</span>
+                                                <span class="h6 icon-tertiary small"><span
+                                                        class="fas fa-medal me-2"></span>C# Language</span>
                                                 <h3 class="h5 card-title mt-3">Object Oriented Programming Language</h3>
-                                                <p class="card-text">C# (C-Sharp) is a programming language developed by Microsoft that runs on the .NET Framework.</p>
-                                                <a href="#" class="btn btn-primary btn-sm">Explore Now</a>
+                                                <p class="card-text">C# (C-Sharp) is a programming language developed by
+                                                    Microsoft that runs on the .NET Framework.</p>
+                                                <a href="./Qna/CSharp.html" class="btn btn-primary btn-sm">Explore
+                                                    Now</a>
                                             </div>
                                         </div>
                                     </div>
-                                  </div>
+                                </div>
 
-                                
+
                             </div>
                         </div>
                     </div>
                 </div>
-            
+
             </div>
 
             <div class="container">
