--- a/Pages/HotTopics.html
+++ b/Pages/HotTopics.html
@@ -87,32 +87,76 @@
                                 <div class="card-header d-flex justify-content-between align-items-center">
                                     <h5 class="mb-0 text-success">List of Hot Topics </h5>
                                 </div>
-                                <div class="p-5">
-                                    <div class="col-12 col-md-6">
-                                         <div class="card shadow">
-                                            <div class="row g-0 align-items-center">
-                                                <div class="col-md-4">
-                                                    <img src="https://play-lh.googleusercontent.com/U0Re_PSVXwD_dl2owMJjuERpK8UXLwMQysoMDB0kGOL73-TMBOurSbZLLEBQMxA5Lg" class="card-img rounded-start" alt="Artist desk">
-                                                </div>
-                                                <div class="col-md-8">
-                                                    <div class="card-body">
-                                                        <a class="text-decoration-none" href="#"><h3 class="h5 card-title">C# Language</h3></a>
-                                                        <p class="card-text mb-4">C# (C-Sharp) is a programming language developed by Microsoft that runs on the .NET Framework.</p>
-                                                        <div class="d-flex justify-content-between align-items-center">
-                                                            <span class="card-text small"><span class="far fa-calendar-alt me-2"></span>15 March 2021</span>
-                                                            <a href="#" class="small text-decoration-none"><span class="far fa-heart me-2"></span>21</a>
+                                <div class="row">
+                                    <div class="col-12 col-sm-12 col-md-6">
+                                        <div class="p-5">
+                                            <div class="card shadow">
+                                                <div class="row g-0 align-items-center">
+                                                    <div class="col-md-4">
+                                                        <img src="https://play-lh.googleusercontent.com/U0Re_PSVXwD_dl2owMJjuERpK8UXLwMQysoMDB0kGOL73-TMBOurSbZLLEBQMxA5Lg"
+                                                            class="card-img rounded-start" alt="Artist desk">
+                                                    </div>
+                                                    <div class="col-md-8">
+                                                        <div class="card-body">
+                                                            <a class="text-decoration-none" href="#">
+                                                                <h3 class="h5 card-title">C# Language</h3>
+                                                            </a>
+                                                            <p class="card-text mb-4">C# (C-Sharp) is a programming
+                                                                language
+                                                                developed by Microsoft that runs on the .NET Framework.
+                                                            </p>
+                                                            <div
+                                                                class="d-flex justify-content-between align-items-center">
+                                                                <span class="card-text small"><span
+                                                                        class="far fa-calendar-alt me-2"></span>15 March
+                                                                    2021</span>
+                                                                <a href="#" class="small text-decoration-none"><span
+                                                                        class="far fa-heart me-2"></span>21</a>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                  </div>
+
+                                    <div class="col-12 col-sm-12 col-md-6">
+                                        <div class="p-5">
+                                            <div class="card shadow">
+                                                <div class="row g-0 align-items-center">
+                                                    <div class="col-md-4">
+                                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAOHRgaDkr08xyVbhCyvkTAIhYLs2MxK8HSgifV1p9fE7_jFGU6_IQSaeV6A&s"
+                                                            class="card-img rounded-start" alt="Artist desk">
+                                                    </div>
+                                                    <div class="col-md-8">
+                                                        <div class="card-body">
+                                                            <a class="text-decoration-none"
+                                                                href="../Pages/HotTopics/HtmlCss.html">
+                                                                <h3 class="h5 card-title">HTML & CSS</h3>
+                                                            </a>
+                                                            <p class="card-text mb-4">CSS describes how HTML elements
+                                                                are to be displayed on screen, paper, or in other media
+                                                            </p>
+                                                            <div
+                                                                class="d-flex justify-content-between align-items-center">
+                                                                <span class="card-text small"><span
+                                                                        class="far fa-calendar-alt me-2"></span>23 July
+                                                                    2024</span>
+                                                                <a href="#" class="small text-decoration-none"><span
+                                                                        class="far fa-heart me-2"></span>120</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            
+
             </div>
 
             <div class="container">
