--- a/Pages/Tutorials/Golang.html
+++ b/Pages/Tutorials/Golang.html
@@ -50,6 +50,18 @@
                                 <a class="nav-link" id="arrays-tab" data-bs-toggle="tab" data-bs-target="#arrays"
                                     type="button" role="tab" aria-controls="arrays" aria-selected="false">Arrays</a>
                             </li>
+                            <li class="nav-item w-100" role="presentation">
+                                <a class="nav-link" id="slice-tab" data-bs-toggle="tab" data-bs-target="#slice"
+                                    type="button" role="tab" aria-controls="slice" aria-selected="false">Slice</a>
+                            </li>
+                            <li class="nav-item w-100" role="presentation">
+                                <a class="nav-link" id="map-tab" data-bs-toggle="tab" data-bs-target="#map"
+                                    type="button" role="tab" aria-controls="map" aria-selected="false">Map</a>
+                            </li>
+                            <li class="nav-item w-100" role="presentation">
+                                <a class="nav-link" id="range-tab" data-bs-toggle="tab" data-bs-target="#range"
+                                    type="button" role="tab" aria-controls="range" aria-selected="false">Range</a>
+                            </li>
                             <!-- <li class="nav-item w-100" role="presentation">
                             <a class="nav-link" id="setup-tab" data-bs-toggle="tab" data-bs-target="#setup" type="button" role="tab" aria-controls="setup" aria-selected="false">Setup and Installation</a>
                           </li> -->
@@ -429,6 +441,184 @@
                         <div>
                             <button class="btn btn-success text-white px-4 py-2"
                                 onclick="navigateTo('switch-tab')">Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end"
+                                onclick="navigateTo('slice-tab')">Next </button>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="slice" role="tabpanel" aria-labelledby="slice-tab">
+                        <h1 class="fw-light py-2 text-danger">Slice in Go</h1>
+                        <h5>Slice</h5>
+                        <ul>
+                            <li><b>Dynamic</b> - When we dont know the size of array we should use slices.</li>
+                            <li>Most used construct in go.</li>
+                            <li>Has useful methods for using array.</li>
+                            <li>
+                                Program :- <br>
+                                <code>
+                                    package main  <br>
+                                    import (  <br>
+                                        "fmt"  <br>
+                                        "slices"  <br>
+                                    )  <br>
+  <br>
+                                    func main() {  <br>
+                                        var nums []int  <br>
+                                        fmt.Println(nums)  <br>
+                                        fmt.Println(nums == nil)  <br>
+                                        fmt.Println(len(nums))  <br>
+  <br>
+                                        //If we want to give it initial size  <br>
+                                        var nums1 = make([]int, 2, 2) //parameters (type,size,capacity?optional)  <br>
+                                        fmt.Println(nums1)  <br>
+                                        fmt.Println(nums1 == nil)  <br>
+                                        //capacity -> max number of elements can fit . As it is dynamic it can change automatically.  <br>
+                                        fmt.Println(cap(nums1))  <br>
+                                        nums1 = append(nums1, 1)  <br>
+                                        fmt.Println(cap(nums1))  <br>
+                                        nums1 = append(nums1, 2)  <br>
+                                        nums1 = append(nums1, 3)  <br>
+                                        nums1 = append(nums1, 4)  <br>
+                                        fmt.Println(cap(nums1))  <br>
+                                        fmt.Println(nums1)  <br>
+                                        nums2 := []int{}  <br>
+                                        nums2 = append(nums2, 1)  <br>
+                                        nums2 = append(nums2, 2)  <br>
+                                        fmt.Println(nums2)  <br>
+                                        fmt.Println(len(nums2))  <br>
+                                        fmt.Println(cap(nums2))  <br>
+                                        nums2[1] = 3  <br>
+                                        fmt.Println(nums2)  <br>
+  <br>
+                                        //copy function  <br>
+                                        var nums3 = make([]int, 0, 5)  <br>
+                                        nums3 = append(nums3, 2)  <br>
+                                        var nums4 = make([]int, len(nums3))  <br>
+                                        copy(nums4, nums3)  <br>
+                                        fmt.Println(nums3, nums4)  <br>
+  <br>
+                                        //slice operator  <br>
+                                        var numbers = []int{1, 2, 3}  <br>
+                                        fmt.Println(numbers[0:2])  <br>
+                                        fmt.Println(numbers[0:1])  <br>
+                                        fmt.Println(numbers[:2])  <br>
+                                        fmt.Println(numbers[1:])  <br>
+  <br>
+                                        //slices package  <br>
+                                        var numbers1 = []int{1, 2, 3}  <br>
+                                        var numbers2 = []int{1, 2, 4}  <br>
+                                        fmt.Println(slices.Equal(numbers1, numbers2))  <br>
+  <br>
+                                        var numbers3 = [][]int{{1, 2, 3}, {4, 5, 6}}  <br>
+                                        fmt.Println(numbers3)  <br>
+                                    }
+                                </code>
+                            </li>
+                        </ul>
+                        <div>
+                            <button class="btn btn-success text-white px-4 py-2"
+                                onclick="navigateTo('arrays-tab')">Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end"
+                                onclick="navigateTo('map-tab')">Next </button>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="map" role="tabpanel" aria-labelledby="map-tab">
+                        <h1 class="fw-light py-2 text-danger">Maps is Go</h1>
+                        <h5>Map</h5>
+                        <ul>
+                            <li>Maps -> hash, object, dict</li>
+                            <li>Program :- <br>
+                                <code>
+                                    package main  <br>
+                                    import (  <br>
+                                        "fmt"  <br>
+                                        "maps"  <br>
+                                    )  <br>
+                                    func main() {  <br>
+                                        m := make(map[string]string)  <br>
+                                        //setting an element  <br>
+                                        m["name"] = "golang"  <br>
+                                        m["area"] = "backend"  <br>
+                                        //get an element  <br>
+                                        fmt.Println(m["name"], m["area"])  <br>
+                                        //If key does not exist then it returns zero value  <br>
+                                        fmt.Println(m["phone"])  <br>
+                                        m1 := make(map[string]int)  <br>
+                                        m1["age"] = 30  <br>
+                                        m1["price"] = 50  <br>
+                                        fmt.Println(m1["age"], m1["phone"])  <br>
+                                        //to know the length of map  <br>
+                                        fmt.Println(len(m), len(m1))  <br>
+                                        //to delete  a value from map  <br>
+                                        delete(m1, "price")  <br>
+                                        fmt.Println(m1, len(m1))  <br>
+                                        //clear all values from map  <br>
+                                        clear(m1)  <br>
+                                        fmt.Println(m1)  <br>
+                                        //elements avaiable on declaration  <br>
+                                        m2 := map[string]int{"price": 50, "phones": 3}  <br>
+                                        fmt.Println(m2)  <br>
+                                        //check if elements are there in map  <br>
+                                        v, ok := m2["phones"]  <br>
+                                        if ok {  <br>
+                                            fmt.Println("All ok")  <br>
+                                            fmt.Println("Value is ", v)  <br>
+                                        } else {  <br>
+                                            fmt.Println("Not ok")  <br>
+                                        }  <br>
+                                        // comparing for equality  <br>
+                                        m3 := map[string]int{"price": 50, "phones": 3}  <br>
+                                        fmt.Println(maps.Equal(m2, m3))  <br>
+                                    }
+                                </code>
+                            </li>
+                        </ul>
+                        <div>
+                            <button class="btn btn-success text-white px-4 py-2"
+                                onclick="navigateTo('slice-tab')">Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end"
+                                onclick="navigateTo('range-tab')">Next </button>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="range" role="tabpanel" aria-labelledby="range-tab">
+                        <h1 class="fw-light py-2 text-danger">Range in Go</h1>
+                        <h5>Range</h5>
+                        <ul>
+                            <li>Program :- <br>
+                                <code>
+                                    package main  <br>
+                                    import "fmt"  <br>
+                                    func main() {  <br>
+                                        nums := []int{2, 4, 6}  <br>
+                                        //Iterating using for loop  <br>
+                                        for i := 0; i < len(nums); i++ {  <br>
+                                            fmt.Println(nums[i])  <br>
+                                        }  <br>
+                                        //Iterating using range  <br>
+                                        for i, num := range nums {  <br>
+                                            fmt.Println(num, i)  <br>
+                                        }  <br>
+                                        //Sum using range  <br>
+                                        sum := 0  <br>
+                                        for _, num := range nums {  <br>
+                                            sum = sum + num  <br>
+                                        }  <br>
+                                        fmt.Println(sum)  <br>
+                                        //print maps value using range. point rune  <br>
+                                        m := map[string]string{"fname": "kumar", "lname": "saurav"}  <br>
+                                        for k, v := range m {  <br>
+                                            fmt.Println(k, v)  <br>
+                                        }  <br>
+                                        // unicode in "golang"  <br>
+                                        for i, c := range "golang" {  <br>
+                                            fmt.Println(i, c, " '"+string(c)+"' ")  <br>
+                                        }  <br>
+                                    }
+                                </code>
+                            </li>
+                        </ul>
+                        <div>
+                            <button class="btn btn-success text-white px-4 py-2"
+                                onclick="navigateTo('map-tab')">Previous </button>
                             <button class="btn btn-success text-white px-4 py-2 float-end"
                                 onclick="navigateTo('babel-tab')">Next </button>
                         </div>
